<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Pentref</string>
    <string name="title_activity_poi_detail">Poi Details</string>
    <string name="title_activity_timetable">Timetable</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Tutorial Activity -->
    <string name="sign_in">Sign in</string>
    <string name="get_started">Get started</string>

    <!-- Search -->
    <string name="search_hint">Enter text</string>

    <!-- Navigation Drawer Headers -->
    <string name="discover">Discover</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="weather">Weather</string>
    <string name="transport_schedule">Schedule</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="about">About Us</string>
    <string name="admin">Admin</string>

    <!-- Poi Details Activity -->
    <string name="all_reviews">All reviews</string>

    <!-- Review Activity -->
    <string name="posting_publicly">Posting publicly</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="review_submitted">Review submitted</string>

    <!-- Discover Fragment -->
    <string name="more">More</string>

    <!-- Transportation Fragment -->
    <string name="tai_o">Tai O</string>
    <string name="next_transport">Then</string>
    <string name="showFullTimetable">Show full timetable</string>

    <!-- Timetable Activity -->
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="adult_price">Adult price: </string>

    <!-- Sign In Fragment -->
    <string name="visitor">Visitor</string>
    <string name="sign_out">Sign Out</string>

    <!-- Content Description For Image Views -->
    <string name="poi_details_header_image">Details of the Point of Interest</string>
    <string name="profile_picture">Profile Picture</string>

    <!-- Settings Fragment -->
    <string name="synchronise_with_server">Synchronise with server</string>
    <string name="summary_synchronise_now">Click to synchronise with server now</string>
    <string name="pref_notification_summary">The notification will appear %1$d minutes before departure.</string>
    <string-array name="pref_notification_minutes_before_departure_options">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>

    <!-- Dialog Messages -->
    <string name="keep_editing">Keep editing</string>
    <string name="discard">Discard</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="loading">Loading</string>
    <string name="dialog_title_reminder">Reminder</string>
    <string name="dialog_message_scheduled_bus">Your scheduled bus/ferry with route number %1$s will depart at</string>
    <string name="dialog_message_confirm_remove_bookmark">Do you want to remove this bookmarked Point of Interest?</string>
    <string name="dialog_message_confirm_issue_notification">Do you want to schedule a notification?</string>
    <string name="dialog_message_confirm_discard_changes">Do you want to discard your changes before submitting?</string>
    <string name="dialog_message_synchronising">Synchronising with server</string>

    <!-- Error Messages -->
    <string name="error_connect_to_internet_to_initialise">Please connect to the internet to initialise the database.</string>
    <string name="error_not_signed_in">Not signed in</string>
    <string name="error_message_sign_in_before_posting_review">Please sign in before posting your review.</string>
    <string name="error_network_unavailable">Network unavailable</string>
    <string name="error_message_connect_to_internet_before_posting_review">Please connect to internet before posting your review.</string>
    <string name="error_message">An error has occurred. Please try again by clicking REFRESH</string>

    <!-- SharedPreferences File Name -->
    <string name="pref_file_name_local" translatable="false">local</string>
    <string name="pref_file_name_user_settings" translatable="false">user_settings</string>

    <string name="facebook_app_id" translatable="false">700599673445936</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="login">ADMIN LOGIN</string>
    <string name="login_label">LOGIN</string>
    <string name="firebase_sign_out">Sign Out</string>
    <string name="signining">Sign in</string>
    <string name="dialog_title_delete_poi">Delete POI?</string>
    <string name="map_loading">Map Loading</string>
    <string name="add_new_poi">Add New POI</string>
    <string name="delete_poi">Delete POI</string>
    <string name="tour">Tour</string>
    <string name="contact_us_address">Address: No. 1, MacDonnell Road, HongKong</string>
    <string name="contact_us_Tel">Tel: 3476 1300</string>
    <string name="contact_us">E-mail: ywca@ywca.org.hk</string>
    <string name="contact_us_a_services">Administrative Services: 3476 1300</string>
    <string name="contact_us_m_services">Member Services:3476 1324</string>
    <string name="title_activity_tour_details">TourDetailsActivity</string>
</resources>