<?xml version="1.0" encoding="utf-8"?>

<!-- The suggest authority and suggest intent data path must match the corresponding information
     specified in the manifest and the SQLite database table name -->
<searchable xmlns:android="http://schemas.android.com/apk/res/android"
    android:hint="@string/search_hint"
    android:label="@string/app_name"
    android:searchSuggestAuthority="com.ywca.pentref.provider"
    android:searchSuggestIntentAction="android.intent.action.VIEW"
    android:searchSuggestIntentData="content://com.ywca.pentref.provider/poi"
    android:searchSuggestSelection="suggest_text_1 LIKE ?" />