<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_timetable"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ywca.pentref.activities.TimetableActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/transport_type_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="4dp"
            app:srcCompat="@drawable/ic_bus_black_36dp" />

        <TextView
            android:id="@+id/route_number_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@id/transport_type_icon"
            android:text="Medium Text"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/change_direction_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/transport_type_icon"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            app:srcCompat="@drawable/ic_change_direction_black" />

        <TextView
            android:id="@+id/from_label"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/transport_type_icon"
            android:layout_marginTop="10dp"
            android:text="@string/from"
            android:textSize="16sp"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:id="@+id/departure_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/transport_type_icon"
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@id/from_label"
            android:layout_toStartOf="@+id/change_direction_image_view"
            android:backgroundTint="@color/colorPrimary">

            <TextView
                android:id="@+id/departure_station_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:text="Medium Text"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/to_label"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/from_label"
            android:layout_marginTop="16dp"
            android:text="@string/to"
            android:textSize="16sp"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/departure_card_view"
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@id/to_label"
            android:layout_toStartOf="@+id/change_direction_image_view"
            android:backgroundTint="@color/colorPrimary">

            <TextView
                android:id="@+id/destination_station_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:lines="1"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:text="Medium Text"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/route_number_text_view"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:visibility="gone">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:backgroundTint="@color/colorAccent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:lines="1"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp"
                    android:text="Tai O"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </android.support.v7.widget.CardView>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="6dp"
                app:srcCompat="@drawable/ic_reversible_symbol" />

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:backgroundTint="@color/colorAccent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:lines="1"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp"
                    android:text="Tung Chung MTR Station"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <TextView
            android:id="@+id/show_all_transports_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/to_label"
            android:layout_marginTop="16dp"
            android:text="@string/showFullTimetable"
            android:textColor="@color/black" />

        <Switch
            android:id="@+id/show_full_timetable_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/show_all_transports_text_view"
            android:checked="false" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/timetable_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/show_all_transports_text_view"
            android:layout_marginTop="8dp" />

        <!--<TextView-->
        <!--android:id="@+id/adult_price_label"-->
        <!--android:layout_width="120dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/adult_price" />-->

        <!--<TextView-->
        <!--android:id="@+id/adult_price_text_view"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_toEndOf="@id/adult_price_label"-->
        <!--android:text="$20" />-->
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>