<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_discover"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/discover" />
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/ic_bookmarked_black_36dp"
            android:title="@string/bookmarks" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_sunny_black"
            android:title="@string/weather" />
        <item
            android:id="@+id/nav_transportation"
            android:icon="@drawable/ic_bus_black_36dp"
            android:title="@string/transport_schedule" />
        <item
            android:id="@+id/nav_tour"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/tour" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about" />

        <item
            android:id="@+id/nav_admin"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/admin" />


    </group>
</menu>
